--- a/project.toml
+++ b/project.toml
@@ -28,6 +28,8 @@ Cbc = "9961bab8-2fa3-5c5a-9d89-47fab24efd76"
 Ipopt = "b6b21f68-93f8-5de0-b562-5493be1d77c9"
 Juniper = "2ddba703-00a4-53a7-87a5-e8b9971dde84"
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
+Memento = "f28f55f0-a522-5efc-85c2-fe41dfb9b2d9"
+InfrastructureModels = "2030c09a-7f63-5d83-885d-db604e0e9cc0"
 
 [targets]
-test = ["Ipopt", "Juniper", "Cbc", "Test"]
+test = ["Ipopt", "Juniper", "Cbc", "Test", "Memento", "InfrastructureModels"]
