--- a/project.toml
+++ b/project.toml
@@ -5,6 +5,8 @@ repo = "https://github.com/lanl-ansi/PetroleumModels.jl.git"
 version = "0.0.1"
 
 [deps]
+Dates = "ade2ca70-3891-5945-98fb-dc099432e06a"
+Dierckx = "39dd38d3-220a-591b-8e3c-4c3a8c710a94"
 InfrastructureModels = "2030c09a-7f63-5d83-885d-db604e0e9cc0"
 JSON = "682c06a0-de6a-54ab-a142-c8b1cf79cde6"
 JuMP = "4076af6c-e467-56ae-b986-b466b2749572"
@@ -14,13 +16,14 @@ Printf = "de0858da-6303-5e67-8744-51eddeeeb8d7"
 
 [compat]
 Cbc = ">= 0.4"
-InfrastructureModels = "~0.3.2, ~0.4"
+Dierckx = "~0.4, ~0.5"
+InfrastructureModels = "~0.5"
 Ipopt = ">= 0.4"
 JSON = "~0.18, ~0.19, ~0.20, ~0.21"
 JuMP = "~0.19.1, ~0.20, ~0.21"
 Juniper = "~0.4, ~0.5, ~0.6"
 MathOptInterface = "~0.8.4, ~0.9"
-Memento = "~0.10, ~0.11, ~0.12"
+Memento = "~0.10, ~0.11, ~0.12, ~0.13, ~1.0, ~1.1"
 julia = "~1"
 
 [extras]
