--- a/project.toml
+++ b/project.toml
@@ -20,8 +20,8 @@ Dierckx = "~0.4, ~0.5"
 InfrastructureModels = "~0.5"
 Ipopt = ">= 0.4"
 JSON = "~0.18, ~0.19, ~0.20, ~0.21"
-JuMP = "~0.19.1, ~0.20, ~0.21"
-Juniper = "~0.4, ~0.5, ~0.6"
+JuMP = "~0.20, ~0.21"
+Juniper = ">= 0.4"
 MathOptInterface = "~0.8.4, ~0.9"
 Memento = "~0.10, ~0.11, ~0.12, ~0.13, ~1.0, ~1.1"
 julia = "~1"
